# rust-http-server

./: .gitignore  Cargo.toml  README.md  project.md
src/: http_head.rs  http_header.rs  http_req.rs  http_res.rs  lib.rs  main.rs  req_handler.rs  req_parser.rs  res_builder.rs  server.rs  utils.rs
src/http_header/: name.rs  value.rs
src/req_parser/: utils.rs
ssl/: cert.pem  key.pem  root.crt  root.key  server.crt  server.key
test-root/: index.php  lipsum.html
test-root/php/: index.php
test-root/subdir/: lipsum-alt.txt
tests/: integration.rs
