[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argparse-rs = "0.1.0"
ascii = "1.1.0"
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.28"
mime_guess = "2.0.5"
ordered-float = "5.1.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs"] }
urlencoding = "2.1.3"
rustls = "0.23.35"
tokio-rustls = "0.26.4"
anyhow = "1.0.100"
base64 = "0.22.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dev-dependencies]
reqwest = "0.12.25"
